# vocalStrobe

./: Bottom-left.STL  Bottom-right.STL  CMakeLists.txt  README.md  Top.STL  pure fractioned strobe.ino  pure strobe  sense.ino  strobe with controls.ino  strobe.ino  voice-based strobe.ino
src/: strobe.cpp  strobe.h
tests/: CMakeLists.txt  test_strobe.cpp
